Fix display word wrap bug

--- a/sass/components/_details.scss
+++ b/sass/components/_details.scss
@@ -14,6 +14,7 @@ details {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    white-space: nowrap
   }
 
   >summary:after {
